force-app/main/default/objects/Order/fields/Covetrus_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Covetrus_Customer_Number__c</fullName>
    <formula>Account.Covetrus_Customer_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Covetrus Customer Number</label>
    <type>Text</type>
</CustomField>