force-app/main/default/objects/Order/fields/Customer_Reference__c.field-meta.xml
<CustomField>
    <fullName>Customer_Reference__c</fullName>
    <formula>Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Reference</label>
    <type>Text</type>
</CustomField>