force-app/main/default/objects/Order/fields/ERP_Sales_Person_Reference__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sales_Person_Reference__c</fullName>
    <formula>CreatedBy.ERP_Sales_Person_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ERP Sales Person Reference</label>
    <type>Text</type>
</CustomField>