force-app/main/default/objects/Order/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <inlineHelpText>This is the Total Amount after discount</inlineHelpText>
    <label>Total Amount</label>
    <summarizedField>OrderItem.Price_After_Discount__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>